
	* Philippe: 53797: Src/params.c, Test/K01nameref.ztst: fix creation
	of undeclared target variable through reference chain

	* Philippe: 53790: Src/builtin.c, Test/K01nameref.ztst,
	Test/V10private.ztst: corrections to reference loop detection

	* Philippe: 53798: Src/params.c, Src/zsh.h, Test/K01nameref.ztst:
	report reference loops created when a reference goes out of scope

2025-10-24  Oliver Kiddle  <opk@zsh.org>

	* 54002: Src/parse.c: silence compiler warning for static function

	* 54001: Src/Zle/zle_keymap.c, Src/exec.c, Src/input.c, Src/jobs.c,
	Src/utils.c: add missing uses of mod_export

2025-10-24  dana  <dana@dana.is>

	* Joshua Krusell: 53988: Src/Modules/zutil.c,
	Test/V12zparseopts.ztst: fix zparseopts segfault

2025-10-23  Oliver Kiddle  <opk@zsh.org>

	* Christopher Bock: github #131 (with tweaks by dana):
	Completion/Debian/Command/_dpkg, Completion/Debian/Command/_schroot,
	Completion/Unix/Command/_libvirt, Completion/Debian/Type/_deb_files,
	Completion/Debian/Command/_madison,
	Completion/Unix/Command/_smartmontools: add missing options

	* Kevin Cox: github #147: Completion/Unix/Command/_git,
	Completion/Unix/Command/_ssh, Completion/Unix/Type/_hosts:
	Clean up some leaked variables in completion functions

	* 53999: Src/module.c: remove further remnants of ansi2knr
	support from AIX specific code

	* 54000: Completion/BSD/Command/_bectl: new completion

2025-10-21  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Mike Gilbert: 53992: Src/utils.c, configure.ac: check for
	declaration of fpurge() instead of its link-ability (as a
	workaround of the problem of musl-libc)

2025-10-02  Oliver Kiddle  <opk@zsh.org>

	* 53985: Completion/Unix/Command/_git: update to 2.51

2025-09-30  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Christoph Erhardt: 53981: Completion/Redhat/Command/_dnf5:
	fix completion of local rpm files

2025-09-29  Oliver Kiddle  <opk@zsh.org>

	* Ryan Rotter: github #145: Completion/Unix/Command/_install: